@@ -31,6 +31,7 @@ import net.minecraftforge.client.event.RenderGameOverlayEvent;
 import net.minecraftforge.client.event.RenderGameOverlayEvent.ElementType;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.common.eventhandler.SubscribeEvent;
+import net.minecraftforge.fml.relauncher.Side;
 import net.silentchaos512.lib.util.Color;
 import net.silentchaos512.scalinghealth.config.Config;
 import net.silentchaos512.scalinghealth.entity.EntityBlightFire;
@@ -39,7 +40,7 @@ import net.silentchaos512.scalinghealth.utils.SHPlayerDataHandler;
 import net.silentchaos512.scalinghealth.utils.SHPlayerDataHandler.PlayerData;
 import org.lwjgl.opengl.GL11;
 
-@Mod.EventBusSubscriber
+@Mod.EventBusSubscriber(Side.CLIENT)
 public final class ScalingHealthClientEvents {
     private static final float DEBUG_TEXT_SCALE = 0.6f;
 
